Bug 314766 - CSV export option not saved
Summary: CSV export option not saved
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Migration/Import/Export (other bugs)
Version First Reported In: 2.5.3
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-09 15:36 UTC by robert leleu
Modified: 2013-02-15 21:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6.1
Sentry Crash Report:
staniek: Usability+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description robert leleu 2013-02-09 15:36:18 UTC
When exporting from a query to paperbobrd or CSV file there is an option for text delimitors
 ("|,|TAB|none) and a possibility to record the choice as default.

This recording is not effective.
Comment 1 Jarosław Staniek 2013-02-13 11:21:45 UTC
Tested for Kexi 2.7 pre-alpha: options for text quote and text encoding are not properly saved indeed. Delimiter option is saved though. Can you see that?
Comment 2 Jarosław Staniek 2013-02-14 20:13:17 UTC
"Default" button also needs fixing.
Comment 3 Jarosław Staniek 2013-02-15 20:46:49 UTC
Git commit be6cd4ae810dd749da4bb1d0b13d13e6ef9ec700 by Jaroslaw Staniek.
Committed on 14/02/2013 at 21:22.
Pushed by staniek into branch 'master'.

Fix options in the CSV Export dialog

*Fix saving options for text quote and text encoding
*Fix function of "Default" button
*Pressing Cancel button should not save options
FIXED-IN:2.6.1
REVIEW:108970

DIGEST: Options in CSV Export dialog have been fixed in Kexi.

M  +29   -28   kexi/plugins/importexport/csv/kexicsvexportwizard.cpp
M  +1    -1    kexi/plugins/importexport/csv/kexicsvexportwizard.h
M  +3    -5    kexi/plugins/importexport/csv/kexicsvwidgets.cpp
M  +1    -1    kexi/plugins/importexport/csv/kexicsvwidgets.h
M  +2    -3    kexi/widget/kexicharencodingcombobox.cpp

http://commits.kde.org/calligra/be6cd4ae810dd749da4bb1d0b13d13e6ef9ec700
Comment 4 Jarosław Staniek 2013-02-15 21:25:02 UTC
Git commit 8dabb4e82175624732667c9616066d3fc6481416 by Jaroslaw Staniek.
Committed on 14/02/2013 at 21:22.
Pushed by staniek into branch 'calligra/2.6'.

Fix options in the CSV Export dialog

*Fix saving options for text quote and text encoding
*Fix function of "Default" button
*Pressing Cancel button should not save options
FIXED-IN:2.6.1
REVIEW:108970

M  +29   -28   kexi/plugins/importexport/csv/kexicsvexportwizard.cpp
M  +1    -1    kexi/plugins/importexport/csv/kexicsvexportwizard.h
M  +3    -5    kexi/plugins/importexport/csv/kexicsvwidgets.cpp
M  +1    -1    kexi/plugins/importexport/csv/kexicsvwidgets.h
M  +2    -3    kexi/widget/kexicharencodingcombobox.cpp

http://commits.kde.org/calligra/8dabb4e82175624732667c9616066d3fc6481416