Fix options in the CSV Export dialog

*Fix saving options for text quote and text encoding
*Fix function of "Default" button
*Pressing Cancel button should not save options

BUG:314766
FIXED-IN:2.6.1
REVIEW:108970